# taco

./: CMakeLists.txt
include/: config.h.in  global.hpp  indicators.hpp  project.hpp  util.hpp
src/: global.cpp  main.cpp  project.cpp
test/: taco.json
test/src/: main.cpp
